--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="head">
       <div class="header center">
         <div class="logo">
-          <img src="./logo.png" alt="" />
+          <img src="./images/logo.webp" alt="logo " />
           <p>SameerYaduVanshiUp</p>
         </div>
         <div id="width" class="nav">
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div class="contentright">
-        <img src="./logo.png" alt="" />
+        <img src="./images/logo.webp" alt="logo" />
       </div>
     </div>
 
